# yacoin

./: .gitignore  GETTING_STARTED.md  setup_mainnet.sh
.claude/: settings.local.json
.github/workflows/: miner-release.yml  release.yml
scrypt-coin/: aclocal.m4  configure.ac
scrypt-coin/.github/workflows/: release.yml
scrypt-coin/src/: Makefile.am  adaptivepow.cpp  bignum.h  chain.h  chainparams.cpp  clientversion.cpp  clientversion.h  coins.h  compat.h  core_io.h  core_read.cpp  dbwrapper.h  httpserver.cpp  init.cpp  init.h  kernel.cpp  main.h  miner.cpp  net.cpp  net_processing.cpp  netaddress.cpp  netaddress.h  netbase.cpp  pow.cpp  scrypt.cpp  scryptd-res.rc  scryptd.cpp  timestamps.h  uint256.h  undo.h  util.cpp
scrypt-coin/src/compat/: glibc_compat.cpp
scrypt-coin/src/consensus/: params.h  validation.h
scrypt-coin/src/crypto/: common.h
scrypt-coin/src/policy/: policy.cpp
scrypt-coin/src/primitives/: block.h
scrypt-coin/src/qt/: askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  coincontroltreewidget.cpp  editaddressdialog.h  notificator.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  paymentrequestplus.h  qrcodedialog.cpp  qvalidatedlineedit.h  receivecoinsdialog.h  receiverequestdialog.cpp  recentrequeststablemodel.cpp  rpcconsole.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondescdialog.h  transactiontablemodel.cpp  utilitydialog.cpp  winshutdownmonitor.h
scrypt-coin/src/rpc/: client.cpp  mining.cpp  server.cpp
scrypt-coin/src/script/: sigcache.h
scrypt-coin/src/support/: lockedpool.cpp
scrypt-coin/src/test/: rpc_tests.cpp  transaction_tests.cpp
scrypt-coin/src/tokens/: tokendb.cpp  tokens.h
scrypt-coin/src/wallet/: coincontrol.h  crypter.cpp  db.cpp  rpcdump.cpp  rpcwallet.cpp  walletdb.cpp
scrypt-coin/test/functional/: feature_epoch.py  feature_tokens.py
scrypt-dex/: package.json
scrypt-dex/public/: index.html
scrypt-explorer/: package.json
scrypt-explorer/src/: server.js
scrypt-faucet/: package.json
scrypt-faucet/src/: server.js
scrypt-launchpad/: package.json
scrypt-launchpad/public/: index.html
scrypt-launchpad/src/: server.js
yacoin/: Makefile.am  README.md  configure.ac
yacoin-dex/: package.json
yacoin-dex/src/: server.js
yacoin-explorer/: package.json
yacoin-explorer/public/: index.html
yacoin-faucet/: package.json
yacoin-faucet/public/: index.html
yacoin-gpu/: .gitignore  configure.ac
yacoin-gpu-miner/: CMakeLists.txt  README.md
yacoin-gpu-miner/docs/: ADAPTIVE_POW.md
yacoin-gpu-miner/src/: main.cpp
yacoin-gpu-miner/src/core/: json_minimal.h  miner.h  stratum.cpp  stratum.h  util.cpp
yacoin-gpu-miner/src/cuda/: adaptivepow.cu  scrypt_jane.cu
yacoin-gpu-miner/src/opencl/: scrypt_jane.cl
yacoin-gpu/.github/workflows/: yacoinbuildmultiplatform.yml
yacoin-gpu/doc/: build-osx.md  build-windows.md  release-process.txt
yacoin-gpu/src/: Makefile.am  blockencodings.cpp  chain.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.h  core_write.cpp  dbwrapper.cpp  hash.h  httprpc.h  keystore.h  miner.cpp  miner.h  net.cpp  net_processing.h  netaddress.cpp  netbase.h  noui.cpp  noui.h  pow.cpp  pow.h  serialize.h  txdb.h  utilmoneystr.cpp  validation.cpp  validation.h  yacoin-cli-res.rc
yacoin-gpu/src/compat/: glibc_sanity.cpp
yacoin-gpu/src/consensus/: consensus.cpp  params.h
yacoin-gpu/src/crypto/: common.h
yacoin-gpu/src/primitives/: block.cpp  block.h  transaction.h
yacoin-gpu/src/qt/: addressbookpage.cpp  addressbookpage.h  bantablemodel.h  bitcoin.cpp  clientmodel.cpp  clientmodel.h  coincontroltreewidget.h  guiutil.h  macdockiconhandler.mm  modaloverlay.h  multisigaddressentry.cpp  multisigdialog.h  networkstyle.cpp  notificator.cpp  optionsdialog.cpp  overviewpage.cpp  peertablemodel.cpp  qvaluecombobox.h  transactiontablemodel.cpp  transactionview.cpp  walletframe.h  walletmodel.cpp  walletmodel.h
yacoin-gpu/src/qt/forms/: optionsdialog.ui  receivecoinsdialog.ui  sendcoinsdialog.ui
yacoin-gpu/src/qt/locale/: bitcoin_da.ts  bitcoin_en_GB.ts  bitcoin_es_MX.ts  bitcoin_et.ts  bitcoin_fr.ts  bitcoin_he_IL.ts  bitcoin_ka.ts  bitcoin_ku_IQ.ts  bitcoin_lv_LV.ts  bitcoin_my.ts  bitcoin_ne.ts  bitcoin_pl.ts  bitcoin_pt_PT.ts  bitcoin_ro.ts  bitcoin_sl_SI.ts  bitcoin_th.ts  bitcoin_tr_TR.ts  bitcoin_zh_CN.ts
yacoin-gpu/src/rpc/: misc.cpp  rawtransaction.cpp  tokens.cpp
yacoin-gpu/src/script/: interpreter.cpp  interpreter.h  script.h  script_error.cpp  sign.h  standard.h
yacoin-gpu/src/support/: events.h
yacoin-gpu/src/test/: miner_tests.cpp  script_tests.cpp
yacoin-gpu/src/tokens/: tokens.cpp
yacoin-gpu/src/wallet/: crypter.h  db.h  rpcwallet.h
yacoin-gpu/test/functional/: feature_basic_transfer.py  feature_op_cltv.py  feature_timelock.py
yacoin-launchpad/: package.json
yacoin/build-aux/m4/: libtool.m4
yacoin/doc/: build-openbsd.md  build-unix.md  cross-compilation-with-depends-system.md
yacoin/share/: genbuild.sh
yacoin/share/qt/: extract_strings_qt.py
yacoin/src/: Makefile.am  Makefile.qt.include  adaptivepow.h  base58.cpp  base58.h  bignum.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.h  coins.cpp  compat.h  genesis_miner.cpp  httpserver.cpp  init.cpp  kernel.cpp  kernel.h  kernelrecord.cpp  key.h  keystore.cpp  main.cpp  miner.cpp  miner.h  net.cpp  net.h  net_processing.cpp  netaddress.h  netbase.h  pow.cpp  protocol.h  pubkey.h  scheduler.cpp  strlcpy.h  timedata.cpp  torcontrol.cpp  txdb.cpp  (+12 more)
yacoin/src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
yacoin/src/consensus/: consensus.h  tx_verify.cpp  tx_verify.h
yacoin/src/crypto/: common.h
yacoin/src/policy/: policy.h
yacoin/src/primitives/: block.cpp  transaction.cpp
yacoin/src/qt/: addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bitcoin.cpp  bitcoin.qrc  explorer.h  (+70 more)
(+130 files in other folders)
